--- a/app/src/main/res/drawable/edit_text_bg.xml
+++ b/app/src/main/res/drawable/edit_text_bg.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke android:color="@color/iron"
-        android:width="@dimen/_1sdp" />
+        android:width="1dp" />
 
-    <corners android:radius="@dimen/_8sdp"/>
+    <corners android:radius="10dp"/>
 
 </shape>
